--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 src = "contracts"
 out = "out"
 libs = ["node_modules", "lib"]
-test = 'test/testForge/'
+test = 'test/ForgeTests/'
 cache_path  = 'cache_forge'
 script = 'scripts/forgeScripts'
 remappings = [
